tests/ui/feature-gates/unstable-crate-import-gated-in-2018-edition.stderr
error[E0658]: use of unstable library feature `unstable_crate_import_gated_in_2018_edition`
  --> $DIR/unstable-crate-import-gated-in-2018-edition.rs:6:5
   |
LL | use unstable_crate_import_gated_in_2018_edition;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unstable_crate_import_gated_in_2018_edition)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
